gen/unityToJava/UnityGrammarParser.java
// Generated from C:/Users/boris/OneDrive/Po��ta�/mAIN 2019-20/Diplomov� pr�ca/unityToJava/src/main/antlr4\UnityGrammar.g4 by ANTLR 4.9
package unityToJava;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UnityGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, DECLARE=2, ALWAYS=3, INITIALLY=4, ASSIGN=5, END=6, BOOLEAN=7, 
		INTEGER=8, ARRAY=9, OF=10, IF=11, COLON=12, DOUBLE_COLON=13, SEMI_COLON=14, 
		COMMA=15, OPEN_PARENTHESES=16, CLOSE_PARENTHESES=17, OPEN_BRACKET=18, 
		CLOSE_BRACKET=19, DOT=20, DOUBLE_DOT=21, NONDETERM_SEPARATOR=22, DETERM_SEPARATOR=23, 
		QUANTIFICATION_OPEN=24, QUANTIFICATION_CLOSE=25, ASSIGN_SIGN=26, TILDE=27, 
		LESS_THAN=28, GREATER_THAN=29, LESS_OR_EQUAL=30, GREATER_OR_EQUAL=31, 
		EQUAL=32, NOT_EQUAL=33, AND=34, OR=35, NOT=36, PLUS=37, MINUS=38, TIMES=39, 
		DIV=40, POWER=41, MOD=42, INT=43, BOOL=44, IDENTIFIER=45, WS=46, LINE_COMMENT=47, 
		BLOCK_COMMENT=48, STRING=49;
	public static final int
		RULE_program = 0, RULE_declare_section = 1, RULE_declare_component = 2, 
		RULE_variable_declaration_list = 3, RULE_variableID = 4, RULE_baseType = 5, 
		RULE_simpleType = 6, RULE_arrayType = 7, RULE_listRange = 8, RULE_rangeDeclaration = 9, 
		RULE_rangeElement = 10, RULE_always_section = 11, RULE_initially_section = 12, 
		RULE_assign_section = 13, RULE_statement_list = 14, RULE_statement = 15, 
		RULE_assignment_statement = 16, RULE_assign_component = 17, RULE_enumerated_assignment = 18, 
		RULE_variable_list = 19, RULE_simple_expression_list = 20, RULE_conditional_expression_list = 21, 
		RULE_quantified_statement = 22, RULE_quantified_assignment = 23, RULE_quantification = 24, 
		RULE_variable = 25, RULE_expression = 26, RULE_simple_value_expression = 27, 
		RULE_relational_operator_expression = 28, RULE_complex_relational_operator_expression = 29, 
		RULE_boolean_expression = 30, RULE_add_minus_or_expression = 31, RULE_mul_div_mod_and_expression = 32, 
		RULE_power_expression = 33, RULE_unary_expression = 34, RULE_primary_expression = 35, 
		RULE_methodDeclaration = 36, RULE_expressionDeclaration = 37, RULE_quantificationDeclaration = 38, 
		RULE_elementListDeclaration = 39, RULE_function = 40, RULE_element_list = 41, 
		RULE_relational_operator = 42, RULE_add_minus_or_operator = 43, RULE_times_div_mod_and_operator = 44, 
		RULE_unary_operator = 45, RULE_quantification_operator = 46, RULE_text = 47, 
		RULE_number = 48, RULE_booleanValue = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "declare_section", "declare_component", "variable_declaration_list", 
			"variableID", "baseType", "simpleType", "arrayType", "listRange", "rangeDeclaration", 
			"rangeElement", "always_section", "initially_section", "assign_section", 
			"statement_list", "statement", "assignment_statement", "assign_component", 
			"enumerated_assignment", "variable_list", "simple_expression_list", "conditional_expression_list", 
			"quantified_statement", "quantified_assignment", "quantification", "variable", 
			"expression", "simple_value_expression", "relational_operator_expression", 
			"complex_relational_operator_expression", "boolean_expression", "add_minus_or_expression", 
			"mul_div_mod_and_expression", "power_expression", "unary_expression", 
			"primary_expression", "methodDeclaration", "expressionDeclaration", "quantificationDeclaration", 
			"elementListDeclaration", "function", "element_list", "relational_operator", 
			"add_minus_or_operator", "times_div_mod_and_operator", "unary_operator", 
			"quantification_operator", "text", "number", "booleanValue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"':'", "'::'", "';'", "','", "'('", "')'", "'['", "']'", "'.'", "'..'", 
			"'[]'", "'||'", "'<<'", "'>>'", "':='", "'~'", "'<'", "'>'", "'<='", 
			"'>='", "'='", "'!='", null, null, null, "'+'", "'-'", "'*'", null, "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "DECLARE", "ALWAYS", "INITIALLY", "ASSIGN", "END", "BOOLEAN", 
			"INTEGER", "ARRAY", "OF", "IF", "COLON", "DOUBLE_COLON", "SEMI_COLON", 
			"COMMA", "OPEN_PARENTHESES", "CLOSE_PARENTHESES", "OPEN_BRACKET", "CLOSE_BRACKET", 
			"DOT", "DOUBLE_DOT", "NONDETERM_SEPARATOR", "DETERM_SEPARATOR", "QUANTIFICATION_OPEN", 
			"QUANTIFICATION_CLOSE", "ASSIGN_SIGN", "TILDE", "LESS_THAN", "GREATER_THAN", 
			"LESS_OR_EQUAL", "GREATER_OR_EQUAL", "EQUAL", "NOT_EQUAL", "AND", "OR", 
			"NOT", "PLUS", "MINUS", "TIMES", "DIV", "POWER", "MOD", "INT", "BOOL", 
			"IDENTIFIER", "WS", "LINE_COMMENT", "BLOCK_COMMENT", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UnityGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UnityGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TextContext program_name;
		public TerminalNode PROGRAM() { return getToken(UnityGrammarParser.PROGRAM, 0); }
		public Assign_sectionContext assign_section() {
			return getRuleContext(Assign_sectionContext.class,0);
		}
		public TerminalNode END() { return getToken(UnityGrammarParser.END, 0); }
		public Declare_sectionContext declare_section() {
			return getRuleContext(Declare_sectionContext.class,0);
		}
		public Always_sectionContext always_section() {
			return getRuleContext(Always_sectionContext.class,0);
		}
		public Initially_sectionContext initially_section() {
			return getRuleContext(Initially_sectionContext.class,0);
		}
		public TextContext text() {
			return getRuleContext(TextContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnityGrammarVisitor ) return ((UnityGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(PROGRAM);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER || _la==STRING) {
				{
				setState(101);
				((ProgramContext)_localctx).program_name = text();
				}
			}

			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECLARE) {
				{
				setState(104);
				declare_section();
				}
			}

			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ALWAYS) {
				{
				setState(107);
				always_section();
				}
			}

			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INITIALLY) {
				{
				setState(110);
				initially_section();
				}
			}

			setState(113);
			assign_section();
			setState(114);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_sectionContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(UnityGrammarParser.DECLARE, 0); }
		public TerminalNode COLON() { return getToken(UnityGrammarParser.COLON, 0); }
		public List<Declare_componentContext> declare_component() {
			return getRuleContexts(Declare_componentContext.class);
		}
		public Declare_componentContext declare_component(int i) {
			return getRuleContext(Declare_componentContext.class,i);
		}
		public Declare_sectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).enterDeclare_section(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).exitDeclare_section(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnityGrammarVisitor ) return ((UnityGrammarVisitor<? extends T>)visitor).visitDeclare_section(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_sectionContext declare_section() throws RecognitionException {
		Declare_sectionContext _localctx = new Declare_sectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declare_section);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(DECLARE);
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(117);
				match(COLON);
				}
			}

			setState(121); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(120);
				declare_component();
				}
				}
				setState(123); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declare_componentContext extends ParserRuleContext {
		public Variable_declaration_listContext variable_declaration_list() {
			return getRuleContext(Variable_declaration_listContext.class,0);
		}
		public TerminalNode COLON() { return getToken(UnityGrammarParser.COLON, 0); }
		public BaseTypeContext baseType() {
			return getRuleContext(BaseTypeContext.class,0);
		}
		public TerminalNode SEMI_COLON() { return getToken(UnityGrammarParser.SEMI_COLON, 0); }
		public TerminalNode COMMA() { return getToken(UnityGrammarParser.COMMA, 0); }
		public Declare_componentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).enterDeclare_component(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).exitDeclare_component(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnityGrammarVisitor ) return ((UnityGrammarVisitor<? extends T>)visitor).visitDeclare_component(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_componentContext declare_component() throws RecognitionException {
		Declare_componentContext _localctx = new Declare_componentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declare_component);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			variable_declaration_list();
			setState(126);
			match(COLON);
			setState(127);
			baseType();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI_COLON || _la==COMMA) {
				{
				setState(128);
				_la = _input.LA(1);
				if ( !(_la==SEMI_COLON || _la==COMMA) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declaration_listContext extends ParserRuleContext {
		public List<VariableIDContext> variableID() {
			return getRuleContexts(VariableIDContext.class);
		}
		public VariableIDContext variableID(int i) {
			return getRuleContext(VariableIDContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(UnityGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UnityGrammarParser.COMMA, i);
		}
		public Variable_declaration_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).enterVariable_declaration_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).exitVariable_declaration_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnityGrammarVisitor ) return ((UnityGrammarVisitor<? extends T>)visitor).visitVariable_declaration_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Variable_declaration_listContext variable_declaration_list() throws RecognitionException {
		Variable_declaration_listContext _localctx = new Variable_declaration_listContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_declaration_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			variableID();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(132);
				match(COMMA);
				setState(133);
				variableID();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableIDContext extends ParserRuleContext {
		public Token variableName;
		public TerminalNode IDENTIFIER() { return getToken(UnityGrammarParser.IDENTIFIER, 0); }
		public VariableIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableID; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).enterVariableID(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).exitVariableID(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnityGrammarVisitor ) return ((UnityGrammarVisitor<? extends T>)visitor).visitVariableID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableIDContext variableID() throws RecognitionException {
		VariableIDContext _localctx = new VariableIDContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableID);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			((VariableIDContext)_localctx).variableName = match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseTypeContext extends ParserRuleContext {
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public BaseTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).enterBaseType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).exitBaseType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnityGrammarVisitor ) return ((UnityGrammarVisitor<? extends T>)visitor).visitBaseType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BaseTypeContext baseType() throws RecognitionException {
		BaseTypeContext _localctx = new BaseTypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_baseType);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOLEAN:
			case INTEGER:
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				simpleType();
				}
				break;
			case ARRAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleTypeContext extends ParserRuleContext {
		public TerminalNode BOOLEAN() { return getToken(UnityGrammarParser.BOOLEAN, 0); }
		public TerminalNode INTEGER() { return getToken(UnityGrammarParser.INTEGER, 0); }
		public SimpleTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).enterSimpleType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).exitSimpleType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnityGrammarVisitor ) return ((UnityGrammarVisitor<? extends T>)visitor).visitSimpleType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleTypeContext simpleType() throws RecognitionException {
		SimpleTypeContext _localctx = new SimpleTypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simpleType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			_la = _input.LA(1);
			if ( !(_la==BOOLEAN || _la==INTEGER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayTypeContext extends ParserRuleContext {
		public TerminalNode ARRAY() { return getToken(UnityGrammarParser.ARRAY, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(UnityGrammarParser.OPEN_BRACKET, 0); }
		public ListRangeContext listRange() {
			return getRuleContext(ListRangeContext.class,0);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(UnityGrammarParser.CLOSE_BRACKET, 0); }
		public TerminalNode OF() { return getToken(UnityGrammarParser.OF, 0); }
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public ArrayTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).enterArrayType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).exitArrayType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnityGrammarVisitor ) return ((UnityGrammarVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayTypeContext arrayType() throws RecognitionException {
		ArrayTypeContext _localctx = new ArrayTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arrayType);
		try {
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				match(ARRAY);
				setState(148);
				match(OPEN_BRACKET);
				setState(149);
				listRange();
				setState(150);
				match(CLOSE_BRACKET);
				setState(151);
				match(OF);
				setState(152);
				arrayType();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				match(ARRAY);
				setState(155);
				match(OPEN_BRACKET);
				setState(156);
				listRange();
				setState(157);
				match(CLOSE_BRACKET);
				setState(158);
				match(OF);
				setState(159);
				simpleType();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListRangeContext extends ParserRuleContext {
		public RangeDeclarationContext range;
		public List<RangeDeclarationContext> rangeDeclaration() {
			return getRuleContexts(RangeDeclarationContext.class);
		}
		public RangeDeclarationContext rangeDeclaration(int i) {
			return getRuleContext(RangeDeclarationContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(UnityGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UnityGrammarParser.COMMA, i);
		}
		public ListRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listRange; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).enterListRange(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UnityGrammarListener ) ((UnityGrammarListener)listener).exitListRange(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UnityGrammarVisitor ) return ((UnityGrammarVisitor<? extends T>)visitor).visitListRange(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListRangeContext listRange() throws RecognitionException {
		ListRangeContext _localctx = new ListRangeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listRange);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			((ListRangeContext)_localctx).range = rangeDeclaration();
			setState(168);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(164);
				match(COMMA);
				setState(165);
				((ListRangeContext)_localctx).range = rangeDeclaration();
				}
				}
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
